--- a/packages/daemon/views/layout.hbs
+++ b/packages/daemon/views/layout.hbs
@@ -25,7 +25,13 @@
           </li>
           {{#if user}}
           <li class="nav-item" data-turbolinks="false">
-            <a href="/calendar" class="nav-link{{#if active.calendar}} active{{/if}}">Calendar</a>
+            <a href="/users" class="nav-link{{#if active.users}} active{{/if}}">Users</a>
+          </li>
+          <li class="nav-item" data-turbolinks="false">
+            <a href="/users/me" class="nav-link{{#if active.me}} active{{/if}}">Me</a>
+          </li>
+          <li class="nav-item" data-turbolinks="false">
+            <a href="/account/requestpermissions" class="nav-link">Request Admin Permissions</a>
           </li>
           {{/if}}
         </ul>
@@ -49,12 +55,12 @@
               <h5 class="dropdown-item-text mb-0">{{ user.displayName }}</h5>
               <p class="dropdown-item-text text-muted mb-0">{{ user.email }}</p>
               <div class="dropdown-divider"></div>
-              <a href="/auth/signout" class="dropdown-item">Sign Out</a>
+              <a href="/account/signout" class="dropdown-item">Sign Out</a>
             </div>
           </li>
           {{else}}
           <li class="nav-item">
-            <a href="/auth/signin" class="nav-link">Sign In</a>
+            <a href="/account/signin" class="nav-link">Sign In</a>
           </li>
           {{/if}}
         </ul>
